@@ -1,10 +1,6 @@
 // -*- C++ -*-
-
-#include "Rivet/Rivet.hh"
 #include "Rivet/Projections/DISKinematics.hh"
 #include "Rivet/Math/Constants.hh"
-#include "Rivet/Cmp.hh"
-#include "Rivet/Tools/ParticleIdUtils.hh"
 
 namespace Rivet {
 
